# m12_jwt

./: main.py  pyproject.toml  sql_app.db
documentation/: app.py  auth.py
refresh/: app.py  auth.py  db.py
simple/: app.py  auth.py
